--- a/src/components/Transcriptions/ManageTranscriptions/AssistantsGrid.css
+++ b/src/components/Transcriptions/ManageTranscriptions/AssistantsGrid.css
@@ -1,12 +1,15 @@
 .assistants-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 0 10px;
-    grid-auto-rows: 10px;
-  }
-  
-  .assistant {
-    width: 250px;
-    grid-row-end: span 2;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  min-width: min-content;
+  max-height: min-content;
+}
+
+.assistants-list-item {
+  flex: 0 1 30em; 
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
   
